<resources>
    <string name="app_name">TenisClubDroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_club">Club</string>
    <string name="menu_contactos">Contactos</string>
    <string name="menu_reservar">Reservar</string>
    <string name="menu_historial">Historial</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_perfil">Perfil</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_borrame">borrame</string>
    <string name="prefs_file">com.example.tenisclubdroid.PREFERENCE_FILE_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="editar">Editar</string>
    <string name="registrar">Registrame</string>
    <string name="usuario">Usuario</string>
    <string name="Contra">Contraseña</string>
    <string name="ConfirmarContra">Confirme Contraseña</string>
    <string name="ContraOlvidada">Olvidé mi contraseña</string>
    <string name="Registro">¿Aún no tienes cuenta?</string>
    <string name="Entrar">Entrar</string>
    <string name="EntrarGoogle">Entrar con Google</string>
    <string name="Recordar">Recordar contraseña</string>
    <string name="textoRestablecerContra">Introduce el email asociado a tu cuenta y te enviaremos un correo para cambiar restablecerla</string>
    <string name="enviar">Enviar</string>
    <string name="qr">Generar Codigo QR</string>
    <string name="Actualizar">Actualizar</string>
    <string name="descripcion">Tu Descripcion</string>
    <string name="mensaje_home">Bienvenido a tu aplicacion para reservar pistas de tenis</string>
    <string name="EntrarTwitter">Entra con Twitter</string>
    <string name="pistas">Pistas disponibles</string>
    <string name="pista_extra">Extras:</string>
    <string name="contrincante">Contrincante:</string>
    <string name="continuar">Continuar</string>
    <string name="inicio">Hora de inicio:</string>
    <string name="final_hora">Hora final:</string>
    <string name="precio">"Precio total: "</string>
    <string name="metodo">Métodos de pago:</string>
    <string name="pago">Visa/MasterCard</string>
    <string name="tarjeta">Numero de tarjeta</string>
    <string name="csv">csv</string>
    <string name="fecha_validez">Fecha validez</string>
    <string name="pagar">Pagar</string>
    <string name="paypal">PayPal</string>
</resources>