<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_club"
                    android:icon="@drawable/ic_club"
                    android:title="@string/menu_club"
                   />
                <item
                    android:id="@+id/nav_contactos"
                    android:icon="@drawable/ic_contactos"
                    android:title="@string/menu_contactos" />
                <item
                    android:id="@+id/nav_reservar"
                    android:icon="@drawable/ic_reservar"
                    android:title="@string/menu_reservar" />
                <item
                    android:id="@+id/nav_historial"
                    android:icon="@drawable/ic_historial"
                    android:title="@string/menu_historial" />
                <item
                    android:id="@+id/nav_calendario"
                    android:icon="@drawable/ic_calendario"
                    android:title="@string/menu_calendario" />
            </menu>
        </item>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_contactos"
                android:title="@string/menu_perfil" />
        </menu>

    </item>
</menu>