<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tenisclubdroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_club"
        android:name="com.example.tenisclubdroid.ui.home.HomeFragment"
        android:label="@string/menu_club"
        tools:layout="@layout/fragment_club" />

    <fragment
        android:id="@+id/nav_contactos"
        android:name="com.example.tenisclubdroid.ui.contactos.ContactosFragment"
        android:label="@string/menu_contactos"
        tools:layout="@layout/fragment_contactos" />
    <fragment
        android:id="@+id/nav_reservar"
        android:name="com.example.tenisclubdroid.ui.reservar.ReservarFragment"
        android:label="@string/menu_reservar"
        tools:layout="@layout/fragment_reservar" />
    <fragment
        android:id="@+id/nav_historial"
        android:name="com.example.tenisclubdroid.ui.home.HomeFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_club" />
    <fragment
        android:id="@+id/nav_calendario"
        android:name="com.example.tenisclubdroid.ui.home.HomeFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.tenisclubdroid.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>