<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    tools:context=".ui.Login.RegistroFragment">

    <EditText
        android:id="@+id/etRegistroUserName"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:backgroundTint="#0347F4"
        android:ems="10"
        android:foregroundTint="#020EAA"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:shadowColor="#071E91"
        android:textColor="@color/blanco"
        android:textColorHighlight="#071E91"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#071E91"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:id="@+id/etRegistroContra"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:backgroundTint="#0347F4"
        android:ems="10"
        android:foregroundTint="#020EAA"
        android:hint="@string/Contra"
        android:inputType="textPassword"
        android:shadowColor="#071E91"
        android:textColor="@color/blanco"
        android:textColorHighlight="#071E91"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#071E91"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/etRegistroEmail"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:backgroundTint="#0347F4"
        android:ems="10"
        android:foregroundTint="#020EAA"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:shadowColor="#071E91"
        android:textColor="@color/blanco"
        android:textColorHighlight="#071E91"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#071E91"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <EditText
        android:id="@+id/etRegistroConfirm"
        android:layout_width="254dp"
        android:layout_height="56dp"
        android:backgroundTint="#0347F4"
        android:ems="10"
        android:foregroundTint="#020EAA"
        android:hint="@string/ConfirmarContra"
        android:inputType="textPassword"
        android:shadowColor="#071E91"
        android:textColor="@color/blanco"
        android:textColorHighlight="#071E91"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#071E91"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <ImageView
        android:id="@+id/ivRegistroLogo"
        android:layout_width="211dp"
        android:layout_height="205dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@mipmap/logo_foreground" />

    <Button
        android:id="@+id/btnRegistroRegistrar"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:background="@color/dorado"
        android:backgroundTint="@color/dorado"
        android:text="@string/registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <ImageView
        android:id="@+id/ivRegistroAtras"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_backarrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

</androidx.constraintlayout.widget.ConstraintLayout>