<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayoutReservar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    tools:context=".ui.reservar.ReservarFragment" >

    <Button
        android:id="@+id/btnReservaContinuar"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:background="@color/dorado"
        android:backgroundTint="@color/gris"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <TextView
        android:id="@+id/tvReservarExtra1"
        android:layout_width="261dp"
        android:layout_height="28dp"
        android:text="@string/pista_extra"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvReservarContrincante"
        android:layout_width="244dp"
        android:layout_height="59dp"
        android:background="@color/dorado"
        android:backgroundTint="@color/dorado"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805" />

    <TextView
        android:id="@+id/tvReservarExtra2"
        android:layout_width="261dp"
        android:layout_height="28dp"
        android:text="@string/pista_extra"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReservarExtra1"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="261dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/pista_extra"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <Spinner
        android:id="@+id/spinnerReservar"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:background="@color/gris"
        android:backgroundTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="261dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/pistas"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerReservar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="261dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/contrincante"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReservarExtra2"
        app:layout_constraintVertical_bias="0.091" />

    <ImageView
        android:id="@+id/ivReservarFoto"
        android:layout_width="229dp"
        android:layout_height="194dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerReservar"
        app:layout_constraintVertical_bias="0.036"
        tools:src="@tools:sample/avatars" />

    <CheckBox
        android:id="@+id/cbReservar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toEndOf="@+id/tvReservarExtra1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <CheckBox
        android:id="@+id/cbReservar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toEndOf="@+id/tvReservarExtra2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <ImageButton
        android:id="@+id/ibReservarContrincante"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/background"
        android:src="@drawable/ic_adduser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toEndOf="@+id/tvReservarContrincante"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

</androidx.constraintlayout.widget.ConstraintLayout>